[project]
name = "crm-restate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "duckdb>=1.4.0",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "hypercorn>=0.17.3",
    "libsql>=0.1.11",
    "libsql-experimental>=0.0.55",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "pyturso>=0.1.5",
    "restate-sdk[serde]>=0.10.2",
    "uvicorn>=0.37.0",
]
